--- a/i3/config
+++ b/i3/config
@@ -11,7 +11,7 @@ font pango:DejaVu Sans Mono 10
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 #exec --no-startup-id dex --autostart --environment i3
-exec --no-startup-id volumeicon
+#exec --no-startup-id volumeicon
 exec --no-startup-id blueman-applet
 exec --no-startup-id picom
 exec --no-startup-id flameshot
@@ -46,15 +46,24 @@ floating_modifier $mod
 # or left-clicking anywhere into the window while holding the floating modifier.
 tiling_drag modifier titlebar
 
+#календарь
+bindsym $mod+c exec zenity --calendar
+
+#скриншот
+bindsym $mod+Shift+s exec flameshot gui
+
+
+
+
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+Shift+d exec --no-startup-id dmenu_run
-bindsym $mod+d exec --no-startup-id rofi -show drun
+bindsym $mod+d exec --no-startup-id rofi -show drun -show-icons
 
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
