--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -20,14 +20,14 @@
 background = #282A2E
 background-alt = #373B41
 foreground = #C5C8C6
-primary = #F0C674
+primary = #C5C8C6
 secondary = #8ABEB7
 alert = #A54242
 disabled = #707880
 
 [bar/mybar]
 width = 100%
-height = 20pt
+height = 28pt
 radius = 0
 
 ; dpi = 96
@@ -48,10 +48,15 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = monospace;2
+;font-0 = monospace;2
+font-0 = mononoki:size=14;1 #шрифт тескта в баре
+font-1 = FontAwesome:pixelsize=16;2
+font-2 = Noto Sans Symbols2:pixelsize=16;2
+font-3 = DejaVu Sans:style=Book:pixelsize=16;2
 
-modules-left = xworkspaces xwindow
-modules-right = filesystem pulseaudio xkeyboard systray memory cpu wlan eth battery date
+modules-left = menu-apps xworkspaces xwindow
+modules-right = volume backlight filesystem battery network-base xkeyboard systray memory cpu wlan eth date
+
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -64,6 +69,36 @@ enable-ipc = true
 
 ;override-redirect = true
 
+
+
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+use-actual-brightness = true
+poll-interval = 0
+enable-scroll = true
+scroll-interval = 10
+; Available tags:
+;   <label> (default)
+;   <ramp>
+;   <bar>
+format = <ramp> <label>
+; Available tokens:
+;   %percentage% (default)
+label = %percentage%%
+; Only applies if <ramp> is used
+ramp-0 = 🌕
+ramp-1 = 🌔
+ramp-2 = 🌓
+ramp-3 = 🌒
+ramp-4 = 🌑
+; Only applies if <bar> is used
+bar-width = 10
+bar-indicator = |
+bar-fill = ─
+bar-empty = ─
+
+
 [module/systray]
 type = internal/tray
 format-margin = 8pt
@@ -71,19 +106,15 @@ tray-spacing = 16pt
 
 [module/xworkspaces]
 type = internal/xworkspaces
-
 label-active = %name%
 label-active-background = ${colors.background-alt}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
-
 label-occupied = %name%
 label-occupied-padding = 1
-
 label-urgent = %name%
 label-urgent-background = ${colors.alert}
 label-urgent-padding = 1
-
 label-empty = %name%
 label-empty-foreground = ${colors.disabled}
 label-empty-padding = 1
@@ -103,29 +134,62 @@ label = %title:0:60:...%
 ;label-unmounted = %mountpoint% not mounted
 ;label-unmounted-foreground = ${colors.disabled}
 
-[module/pulseaudio]
-type = internal/pulseaudio
+;[module/pulseaudio]
+;type = internal/pulseaudio
+; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
+; If not, uses default sink
+; sink = alsa_output.pci-0000_12_00.3.analog-stereo
+; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
+; Default: true
+;use-ui-max = false
+; Interval for volume increase/decrease (in percent points)
+; Default: 5
+;interval = 5
+; Reverses the increment/decrement on scroll event. Set this to true if you are
+; using natural scrolling option on your touchpad.
+; New in version 3.7.0
+; Default: false
+;reverse-scroll = false
+; Available tags:
+;   <label-volume> (default)
+;   <ramp-volume>
+;   <bar-volume>
+;format-volume = <ramp-volume> <label-volume>
+; Available tags:
+;   <label-muted> (default)
+;   <ramp-volume>
+;   <bar-volume>
+;format-muted = <label-muted>
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+;label-volume = %percentage%%
+; Available tokens:
+;   %percentage% (default)
+;   %decibels%
+;label-muted = 🔇 muted
+;label-muted-foreground = #666
+; Only applies if <ramp-volume> is used
+;ramp-volume-0 = 🔈
+;ramp-volume-1 = 🔉
+;ramp-volume-2 = 🔊
+; Right and Middle click
+;click-right = pavucontrol
+; click-middle = 
 
-format-volume-prefix = "VOL "
-format-volume-prefix-foreground = ${colors.primary}
-format-volume = <label-volume>
 
-label-volume = %percentage%%
-
-label-muted = muted
-label-muted-foreground = ${colors.disabled}
 
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
-
 label-layout = %layout%
 label-layout-foreground = ${colors.primary}
-
 label-indicator-padding = 2
 label-indicator-margin = 1
 label-indicator-foreground = ${colors.background}
 label-indicator-background = ${colors.secondary}
+format-prefix = " "
+format-prefix-foreground = ${colors.primary}
 
 ;[module/memory]
 ;type = internal/memory
@@ -139,7 +203,7 @@ label-indicator-background = ${colors.secondary}
 ;interval = 2
 ;format-prefix = "CPU "
 ;format-prefix-foreground = ${colors.primary}
-;label = %percentage:2%%
+;udoabel = %percentage:2%%
 
 ;[network-base]
 ;type = internal/network
@@ -160,13 +224,56 @@ label-indicator-background = ${colors.secondary}
 
 [module/date]
 type = internal/date
-interval = 1
-
-date = %H:%M
-date-alt = %Y-%m-%d %H:%M:%S
-
+;date =  %d/%m/%Y |  %H:%M:%S
+date = %H:%M:%S
 label = %date%
 label-foreground = ${colors.primary}
+; Available tags:
+;   <label> (default)
+format = %{A1:zenity --calendar:} <label> %{A}
+format-foreground = #fff
+
+[module/volume]
+
+type = internal/volume
+label-muted = 🔇 muted
+label-muted-foreground = #666
+
+; Only applies if <ramp-volume> is used
+ramp-volume-0 = 🔈
+ramp-volume-1 = 🔉
+ramp-volume-2 = 🔊
+; Right and Middle click
+click-right = pavucontrol
+; click-middle =
+
+
+format-volume = <ramp-volume> <bar-volume>
+label-volume = VOL
+label-volume-foreground = ${root.foreground}
+
+format-muted-prefix = " "
+format-muted-foreground = ${colors.foreground-alt}
+
+bar-volume-width = 10
+bar-volume-foreground-0 = #55aa55
+bar-volume-foreground-1 = #55aa55
+bar-volume-foreground-2 = #55aa55
+bar-volume-foreground-3 = #55aa55
+bar-volume-foreground-4 = #55aa55
+bar-volume-foreground-5 = #f5a70a
+bar-volume-foreground-6 = #ff5555
+bar-volume-gradient = true
+bar-volume-indicator = │
+bar-volume-indicator-font = 2
+bar-volume-indicator-foreground = #0088CC
+bar-volume-fill = ─
+bar-volume-fill-font = 2
+bar-volume-empty = ─
+bar-volume-empty-font = 2
+bar-volume-empty-foreground = ${colors.foreground-alt}
+
+
 
 [settings]
 screenchange-reload = true
@@ -176,13 +283,7 @@ pseudo-transparency = true
 type = internal/battery
 
 ; This is useful in case the battery never reports 100% charge
-; Default: 100
 full-at = 99
-
-; format-low once this charge percentage is reached
-; Default: 10
-; New in version 3.6.0
-low-at = 5
 
 ; Use the following command to list batteries and adapters:
 ; $ ls -1 /sys/class/power_supply/
@@ -200,6 +301,76 @@ adapter = ADP1
 ; Default: 5
 poll-interval = 5
 
+; see "man date" for details on how to format the time string
+; NOTE: if you want to use syntax tags here you need to use %%{...}
+; Default: %H:%M:%S
+time-format = %H:%M
 
+; Available tags:
+;   <label-charging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-charging>
+format-charging = <animation-charging> <label-charging>
+
+; Available tags:
+;   <label-discharging> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;   <animation-discharging>
+format-discharging =  <ramp-capacity> <label-discharging>
+
+; Available tags:
+;   <label-full> (default)
+;   <bar-capacity>
+;   <ramp-capacity>
+;format-full = <ramp-capacity> <label-full>
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current charge rate in watts)
+label-charging = C %percentage%%
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+;   %time%
+;   %consumption% (shows current discharge rate in watts)
+label-discharging = D %percentage%%
+
+; Available tokens:
+;   %percentage% (default) - is set to 100 if full-at is reached
+;   %percentage_raw%
+label-full = F
+
+; Only applies if <ramp-capacity> is used
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+; Only applies if <bar-capacity> is used
+bar-capacity-width = 10
+
+; Only applies if <animation-charging> is used
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+; Framerate in milliseconds
+animation-charging-framerate = 750
+
+; Only applies if <animation-discharging> is used
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+; Framerate in milliseconds
+animation-discharging-framerate = 500
 
 ; vim:ft=dosini
